// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated style shape snapshots > osm colorful (dark) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful (light) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful with terrain + hillshade + extruded buildings 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": true,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "hillshade:hillshade",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
    "fill-extrusion:building-3d",
  ],
  "sources": [
    "elevation",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite raster-only (no overlay) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-symbols",
    "background:slot-below-labels",
  ],
  "sources": [
    "satellite",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite with toner overlay 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-streets",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "satellite",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > variant layer counts 1`] = `
{
  "colorful-dark-terrain/de": 281,
  "colorful-dark-terrain/en": 281,
  "colorful-dark-terrain/style": 281,
  "colorful-dark/de": 280,
  "colorful-dark/en": 280,
  "colorful-dark/nolabel": 248,
  "colorful-dark/style": 280,
  "colorful-terrain/de": 281,
  "colorful-terrain/en": 281,
  "colorful-terrain/style": 281,
  "colorful/de": 280,
  "colorful/en": 280,
  "colorful/nolabel": 248,
  "colorful/style": 280,
  "eclipse-terrain/de": 281,
  "eclipse-terrain/en": 281,
  "eclipse-terrain/style": 281,
  "eclipse/de": 280,
  "eclipse/en": 280,
  "eclipse/nolabel": 248,
  "eclipse/style": 280,
  "empty/style": 5,
  "gray-dark-terrain/de": 281,
  "gray-dark-terrain/en": 281,
  "gray-dark-terrain/style": 281,
  "gray-dark/de": 280,
  "gray-dark/en": 280,
  "gray-dark/nolabel": 248,
  "gray-dark/style": 280,
  "gray-terrain/de": 281,
  "gray-terrain/en": 281,
  "gray-terrain/style": 281,
  "gray/de": 280,
  "gray/en": 280,
  "gray/nolabel": 248,
  "gray/style": 280,
  "graybeard-terrain/de": 281,
  "graybeard-terrain/en": 281,
  "graybeard-terrain/style": 281,
  "graybeard/de": 280,
  "graybeard/en": 280,
  "graybeard/nolabel": 248,
  "graybeard/style": 280,
  "muted-dark-terrain/de": 281,
  "muted-dark-terrain/en": 281,
  "muted-dark-terrain/style": 281,
  "muted-dark/de": 280,
  "muted-dark/en": 280,
  "muted-dark/nolabel": 248,
  "muted-dark/style": 280,
  "muted-terrain/de": 281,
  "muted-terrain/en": 281,
  "muted-terrain/style": 281,
  "muted/de": 280,
  "muted/en": 280,
  "muted/nolabel": 248,
  "muted/style": 280,
  "natural-dark-terrain/de": 281,
  "natural-dark-terrain/en": 281,
  "natural-dark-terrain/style": 281,
  "natural-dark/de": 280,
  "natural-dark/en": 280,
  "natural-dark/nolabel": 248,
  "natural-dark/style": 280,
  "natural-terrain/de": 281,
  "natural-terrain/en": 281,
  "natural-terrain/style": 281,
  "natural/de": 280,
  "natural/en": 280,
  "natural/nolabel": 248,
  "natural/style": 280,
  "neutrino-terrain/de": 281,
  "neutrino-terrain/en": 281,
  "neutrino-terrain/style": 281,
  "neutrino/de": 280,
  "neutrino/en": 280,
  "neutrino/nolabel": 248,
  "neutrino/style": 280,
  "satellite/de": 183,
  "satellite/en": 183,
  "satellite/overlay": 183,
  "satellite/style": 5,
  "shadow-terrain/de": 281,
  "shadow-terrain/en": 281,
  "shadow-terrain/style": 281,
  "shadow/de": 280,
  "shadow/en": 280,
  "shadow/nolabel": 248,
  "shadow/style": 280,
  "terrain/de": 184,
  "terrain/en": 184,
  "terrain/overlay": 184,
  "terrain/style": 6,
  "toner-dark-terrain/de": 281,
  "toner-dark-terrain/en": 281,
  "toner-dark-terrain/style": 281,
  "toner-dark/de": 280,
  "toner-dark/en": 280,
  "toner-dark/nolabel": 248,
  "toner-dark/style": 280,
  "toner-terrain/de": 281,
  "toner-terrain/en": 281,
  "toner-terrain/style": 281,
  "toner/de": 280,
  "toner/en": 280,
  "toner/nolabel": 248,
  "toner/style": 280,
}
`;
